...
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="CDD-yD-0Cx"/>
                                                </constraints>
                                                <inset key="contentEdgeInsets" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
                                                <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                <state key="normal" title="Delete all Cities">
                                                    <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <state key="highlighted">
                                                    <color key="titleColor" red="0.58072251080000004" green="0.066734083" blue="0.0" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <connections>
...
                            <constraint firstItem="s4D-4v-HUr" firstAttribute="bottom" secondItem="Lya-18-aKs" secondAttribute="bottom" id="NVb-qE-88H"/>
                            <constraint firstItem="Lya-18-aKs" firstAttribute="top" secondItem="s4D-4v-HUr" secondAttribute="top" id="XCk-Sp-dN0"/>
                            <constraint firstItem="s4D-4v-HUr" firstAttribute="trailing" secondItem="Lya-18-aKs" secondAttribute="trailing" id="yYh-I9-PO0"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="s4D-4v-HUr"/>
                    </view>
                    <navigationItem key="navigationItem" title="Settings" id="Ycd-Gk-Cbu">
                        <barButtonItem key="leftBarButtonItem" image="CloseIcon" id="gGL-Tc-yLi">
                            <connections>
                                <action selector="actionClose:" destination="tCA-7B-DwG" id="519-yp-nbn"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
